wallet connection done

--- a/QRPaymentScanner/Info.plist
+++ b/QRPaymentScanner/Info.plist
@@ -21,5 +21,26 @@
 			</array>
 		</dict>
 	</dict>
+	
+	<!-- URL scheme required by MetaMask SDK for deeplinking. Make sure the dappScheme below matches this value. -->
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.vine.starknet</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>starknet</string>
+			</array>
+		</dict>
+	</array>
+
+	<!-- Allow canOpenURL and SDK deeplinks to MetaMask -->
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>metamask</string>
+	</array>
 </dict>
 </plist>
